# pywhiten2

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: getting-started.md
pywhiten2/: __init__.py
pywhiten2/data/: Frequency.py  Periodogram.py  Timeseries.py  __init__.py
pywhiten2/optimization/: __init__.py  models.py
tests/: test_data.py
